# langchain_study

./: .env.template  README.md  pyproject.toml
chat/: main.py
notebooks/: 06_models.ipynb  07_prompt.ipynb  08_indexes.ipynb  09_chains.ipynb  10_agents.ipynb  11_memory.ipynb
notebooks/ReAct/: langchain-japanese.ipynb  react-with-openai-gpt-and-langchain.ipynb
